buildLog
Scanning dependencies of target ardrone_application_node
[ 16%] Building CXX object CMakeFiles/ardrone_application_node.dir/src/command.cpp.o
[ 33%] Building CXX object CMakeFiles/ardrone_application_node.dir/src/ARDroneControllerNode.cpp.o
[ 50%] Building CXX object CMakeFiles/ardrone_application_node.dir/src/ardrone_application_node.cpp.o
In file included from /home/hewhosurvives/c++/randomProjects/ros/catkin_ws/src/ardrone_application_node/src/ardrone_application_node.cpp:4:0:
/home/hewhosurvives/c++/randomProjects/ros/catkin_ws/src/ardrone_application_node/src/ARDroneControllerNode.hpp: In function ‘int main(int, char**)’:
/home/hewhosurvives/c++/randomProjects/ros/catkin_ws/src/ardrone_application_node/src/ARDroneControllerNode.hpp:99:6: error: ‘void ARDroneControllerNode::controlDrone()’ is private
 void controlDrone();
      ^
/home/hewhosurvives/c++/randomProjects/ros/catkin_ws/src/ardrone_application_node/src/ardrone_application_node.cpp:18:38: error: within this context
 myARDroneControllerNode.controlDrone();
                                      ^
make[2]: *** [CMakeFiles/ardrone_application_node.dir/src/ardrone_application_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/ardrone_application_node.dir/all] Error 2
make: *** [all] Error 2
